--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "framer-motion": "^11.3.5",
     "lenis": "^1.1.6",
     "next": "14.2.5",
