chore: implement the plan slug page

--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,7 @@
         "select-name": "off"
       }
     ],
-    "apple-touch-icons": "off"
+    "apple-touch-icons": "off",
+    "button-type": "off"
   }
 }
