--- a/.hintrc
+++ b/.hintrc
@@ -18,6 +18,7 @@
       }
     ],
     "apple-touch-icons": "off",
-    "button-type": "off"
+    "button-type": "off",
+    "typescript-config/consistent-casing": "off"
   }
 }
