--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@strapi/blocks-react-renderer": "^1.0.1",
-    "lenis": "^1.1.6",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.5",
+    "lenis": "^1.1.6",
     "next": "14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/node": "^20",
